examples/manual/failing/ImportModule.purs
module M2 where

  data X = X

module Main where

  import M1
